QA_Ipreo/src/objects/Desktop_Status__c.object
<CustomObject>
    <description>Account At-Risk Status</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Desktop_Statuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desktop_Status__c</fullName>
        <label>Desktop Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>At-Risk Status</label>
    <nameField>
        <displayFormat>Status-{0000}</displayFormat>
        <label>Desktop Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>At-Risk Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Account</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Account__c ) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Account can not be modified</errorMessage>
    </validationRules>
</CustomObject>